--- a/reset.css
+++ b/reset.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-
+/* es propiedad de norberto lodela */
 /*###############  RESET ###############*/
 HTML, BODY{width:100%; height:100%;}
 html{ height:100%; margin:0; padding:0;}
@@ -20,7 +20,6 @@ a, a:visited {text-decoration: none; outline: none; border: none;}
 a, a:visited{font-size:12px; color:#fefefe;}
 a:hover{color:#fefefe; text-decoration:underline;}
 a.readMore {float:right;}
-	
 ol, ul {list-style: none;}
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after,
